# weewx-clearskies-stack

./: .gitignore  ADDITIONAL-USES.md  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  Caddyfile  Dockerfile  INSTALL.md  LICENSE-RATIONALE.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: dco.yml  dep-audit.yml  release.yml
archive/: .env.example.pre-split
config/: api.conf.example  realtime.conf.example
dev/: .env.example  .gitignore  README.md  docker-compose.yml
dev/mariadb-init/: 01-clearskies-ro.sql
docs/: OPERATOR-MANUAL.md  RELEASE-PROCEDURE.md
docs/planning/: REDIS-WIZARD-BRIEF.md
examples/home-assistant/: sensors-mqtt.yaml  sensors-rest.yaml
examples/reverse-proxy/: Caddyfile  apache.conf  nginx.conf
examples/systemd/: weewx-clearskies-api.service  weewx-clearskies-config.service  weewx-clearskies-realtime.service
frontend-host/: .env.example  Caddyfile  docker-compose.yml
scripts/: install-prerequisites.sh  setup.sh
scripts/lib/: detect-network.sh
single-host/: .env.example  Caddyfile  docker-compose.yml
tests/: conftest.py  test_app.py  test_auth.py  test_cli.py  test_config_reader.py  test_config_updater.py  test_image_import.py  test_registry.py  test_skin_conf_payload.py  test_skin_import.py  test_tls.py  test_wizard_branding.py  test_wizard_column_mapping_merge.py  test_wizard_config_writer.py  test_wizard_db.py  test_wizard_earthquake_config.py  test_wizard_import.py  test_wizard_providers.py  test_wizard_schema.py  test_wizard_state.py  test_wizard_topology.py
weewx-host/: .env.example  docker-compose.yml
weewx_clearskies_config/: __main__.py  app.py  auth.py  cli.py  cli_wizard.py  i18n.py  tls.py
weewx_clearskies_config/admin/: routes.py
weewx_clearskies_config/config/: __init__.py  reader.py  routes.py  updater.py
weewx_clearskies_config/docs/: providers.md
weewx_clearskies_config/registry/: __init__.py  declarations.py  fields.py  registry.py  sections.py  validation.py
weewx_clearskies_config/static/: EULA.txt  EULA_de.txt  EULA_es.txt  EULA_fil.txt  EULA_fr.txt  EULA_it.txt  EULA_ja.txt  EULA_nl.txt  EULA_pt-BR.txt  EULA_pt-PT.txt  EULA_ru.txt  EULA_zh-CN.txt  EULA_zh-TW.txt  card-layout-editor.js
weewx_clearskies_config/templates/: base.html  bootstrap.html  login.html
weewx_clearskies_config/translations/: de.json  en.json  es.json  fil.json  fr.json  it.json  ja.json  nl.json  pt-BR.json  pt-PT.json  ru.json  zh-CN.json  zh-TW.json
weewx_clearskies_config/wizard/: __init__.py  (+14 more)
(+69 files in other folders)
